[gd_scene load_steps=4 format=3 uid="uid://byvpr545rer0v"]

[ext_resource type="Script" path="res://menu.gd" id="1_p3bbd"]
[ext_resource type="FontFile" uid="uid://blthdxa18dlua" path="res://assets/Valoon.ttf" id="2_lhkov"]

[sub_resource type="LabelSettings" id="LabelSettings_uy4ab"]
font = ExtResource("2_lhkov")

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p3bbd")

[node name="main menu" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -39.5
offset_right = 60.0
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="main menu"]
layout_mode = 2
text = "Pi√±as Mortales"
label_settings = SubResource("LabelSettings_uy4ab")

[node name="Play" type="Button" parent="main menu"]
layout_mode = 2
text = "PLAY
"

[node name="Settings" type="Button" parent="main menu"]
layout_mode = 2
text = "SETTINGS"

[node name="Exit" type="Button" parent="main menu"]
layout_mode = 2
text = "EXIT
"

[node name="Settings menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="Settings menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -33.0
offset_right = 30.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Video" type="Button" parent="Settings menu/VBoxContainer"]
layout_mode = 2
text = "VIDEO"

[node name="Audio" type="Button" parent="Settings menu/VBoxContainer"]
layout_mode = 2
text = "AUDIO"

[node name="BackToMain" type="Button" parent="Settings menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -31.0
offset_right = 52.0
grow_horizontal = 2
grow_vertical = 0
text = "MAIN MENU"

[node name="Video menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="Video menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -43.0
offset_right = 64.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="labels" type="VBoxContainer" parent="Video menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FullScreen" type="Label" parent="Video menu/HBoxContainer/labels"]
layout_mode = 2
text = "FULLSCREEN"

[node name="Borderless" type="Label" parent="Video menu/HBoxContainer/labels"]
layout_mode = 2
text = "BORDERLESS"

[node name="VSync" type="Label" parent="Video menu/HBoxContainer/labels"]
layout_mode = 2
text = "VSYNC"

[node name="checks" type="VBoxContainer" parent="Video menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FullScreen" type="CheckBox" parent="Video menu/HBoxContainer/checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Video menu/HBoxContainer/checks"]
layout_mode = 2

[node name="VSync" type="CheckBox" parent="Video menu/HBoxContainer/checks"]
layout_mode = 2

[node name="BackToMain" type="Button" parent="Video menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -31.0
offset_right = 52.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "MAIN MENU"

[node name="Audio menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="Audio menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.0
offset_top = -43.0
offset_right = 108.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Label" type="VBoxContainer" parent="Audio menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Master" type="Label" parent="Audio menu/HBoxContainer/Label"]
layout_mode = 2
size_flags_vertical = 6
text = "MASTER
"

[node name="Music" type="Label" parent="Audio menu/HBoxContainer/Label"]
layout_mode = 2
size_flags_vertical = 6
text = "MUSIC"

[node name="SoundFX" type="Label" parent="Audio menu/HBoxContainer/Label"]
layout_mode = 2
size_flags_vertical = 6
text = "SOUNDFX"

[node name="Slider" type="VBoxContainer" parent="Audio menu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Master" type="HSlider" parent="Audio menu/HBoxContainer/Slider"]
layout_mode = 2

[node name="Music" type="HSlider" parent="Audio menu/HBoxContainer/Slider"]
layout_mode = 2

[node name="SoundFX" type="HSlider" parent="Audio menu/HBoxContainer/Slider"]
layout_mode = 2

[node name="BackToMain" type="Button" parent="Audio menu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -31.0
offset_right = 52.0
grow_horizontal = 2
grow_vertical = 0
text = "MAIN MENU"

[connection signal="pressed" from="main menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="main menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="main menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings menu/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Settings menu/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Settings menu/BackToMain" to="." method="_on_back_to_main_pressed"]
[connection signal="toggled" from="Video menu/HBoxContainer/checks/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Video menu/HBoxContainer/checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="Video menu/HBoxContainer/checks/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="Video menu/BackToMain" to="." method="_on_back_to_main_pressed"]
[connection signal="changed" from="Audio menu/HBoxContainer/Slider/Master" to="." method="_on_master_changed"]
[connection signal="changed" from="Audio menu/HBoxContainer/Slider/Music" to="." method="_on_music_changed"]
[connection signal="changed" from="Audio menu/HBoxContainer/Slider/SoundFX" to="." method="_on_sound_fx_changed"]
[connection signal="pressed" from="Audio menu/BackToMain" to="." method="_on_back_to_main_pressed"]
